# ledger-auth

./: .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  package-lock.json
.github/workflows/: build.yml
entity/: Cargo.toml
entity/src/: item.rs  lib.rs  team.rs  team_invite.rs  user.rs  user_team.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_item_table.rs  m20220101_000001_create_user_table.rs  m20250831_230005_update_users_add_teams.rs  m20250921_043622_many_teams.rs
proto/: ledger.proto
scripts/: pullall.sh
src/: config.rs  lib.rs  main.rs
src/db/: item.rs  mod.rs  postgres_service.rs  team_invite.rs  teams.rs  user.rs
src/grpc/: authentication.rs  mod.rs
src/macros/: mod.rs
src/routes/: fail.rs  health.rs  mod.rs  validate.rs
src/routes/team/: accept_invite.rs  adduser.rs  create.rs  invite.rs  mod.rs
src/routes/team/admin/: invite.rs  mod.rs
src/routes/user/: create.rs  mod.rs  regenerate.rs  update.rs
src/types/: error.rs  item.rs  mail.rs  mod.rs  response.rs  team.rs  token.rs  user.rs
src/utils/: mail.rs  mod.rs  token.rs  webutils.rs
tests/: comprehensive_flow_tests.rs  flow_database_tests.rs  health_flow.rs  health_flow_test.rs  integration_test.rs  invite_accept_flow_test.rs  simple_integration_test.rs  team_flow.rs  team_flows_test.rs  test_common.rs  user_flow.rs  user_flows_test.rs  validation_flow.rs  validation_flows_test.rs
tests/common/: client.rs  mod.rs
tests/old/: _user_flow.rs
