[package]
name = "ledger-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
sea-orm = { version = "1.1.10", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }
serde = "1.0.219"
entity = { path = "./entity" }
migration = { path = "./migration" }
dotenv = "0.15.0"
env_logger = "0.9"
tokio = "1.45.0"
uuid = { version = "1.16.0", features = ["v4"]}
urlencoding = "2"
tracing = "0.1.41"
chrono = "0.4.41"

argon2 = "0.5.3"
base64 = "0.22.1"
rand_core = "0.6"
anyhow = "1.0.99"
derive_more = "2.0.1"
